# customer

backend/: alembic.ini  pyproject.toml  test_settings.py
backend/alembic/: env.py
backend/alembic/versions/: a536a397736e_create_customer_table.py
backend/app/: main.py
backend/app/api/v1/: customer.py
backend/app/core/: config.py  database.py
backend/app/crud/: customer.py
backend/app/models/: customer.py
backend/app/schemas/: __init__.py  customer.py
backend/app/services/: customer_service.py
backend/tests/: test_connection.py
frontend/: package-lock.json  package.json
frontend/src/components/: CustomerList.vue
