[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "christsui1228", email = "christsui1228@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.5", 
    "sqlalchemy[asyncio]>=2.0.36", 
    "asyncpg>=0.30.0", 
    "uvicorn>=0.32.0", 
    "pydantic>=2.9.2", 
    "pydantic-settings>=2.6.1", 
    "python-dotenv>=1.0.1", 
    "tree>=0.2.4", 
    "alembic>=1.14.0"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

# 开发依赖放到这里
[project.optional-dependencies]
dev = [
    "pytest>=8.3.3", 
    "pytest-asyncio>=0.24.0", 
    "httpx>=0.27.2",
    "pytest-cov>=4.1.0"
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0", 
    "httpx>=0.27.2",
    "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]

[tool.pdm.build]
packages = ["app"]

[tool.pdm.scripts]
tree = "tree"